--- a/vignettes/nldi.Rmd
+++ b/vignettes/nldi.Rmd
@@ -21,11 +21,13 @@ editor_options:
 ```{r setup, include=FALSE}
 library(knitr)
 
-opts_chunk$set(warning = FALSE,
-               message = FALSE,
-               out.width = "75%",
-               fig.align = "center",
-               comment  = "#>")
+opts_chunk$set(
+  warning = FALSE,
+  message = FALSE,
+  out.width = "75%",
+  fig.align = "center",
+  comment = "#>"
+)
 ```
 
 This post will demonstrate `dataRetrieval` functions to query the [Network Linked Data Index](https://labs.waterdata.usgs.gov/about-nldi/index.html) (NLDI).
@@ -64,9 +66,9 @@ Like any routing service, there are three types of information you can provide `
 Each of these is discussed below using the following packages:
 
 ```{r}
-library(dplyr)         # Data frame manipulation
-library(ggplot2)       # Plotting
-library(patchwork)     # Arranging plots
+library(dplyr) # Data frame manipulation
+library(ggplot2) # Plotting
+library(patchwork) # Arranging plots
 library(dataRetrieval) # The star of the show!
 ```
 
@@ -150,40 +152,52 @@ From any feature (`comid`, `huc12`, `nwis`, `wqp`, `origin`) or `location`, four
 A example view of these navigation types can be seen below for NWIS site [11109000](https://waterdata.usgs.gov/monitoring-location/11109000).
 
 ```{r, echo = FALSE, fig.cap= "NLDI Navigation Options"}
-x <- findNLDI(nwis = 11109000,
-              nav = c("UT", "DM", "UM", "DD"))
+x <- findNLDI(
+  nwis = 11109000,
+  nav = c("UT", "DM", "UM", "DD")
+)
 
 ggplot() +
   geom_sf(data = x$UT, aes(color = "UT")) +
-  geom_sf(data = x$UM,  aes(color  = "UM")) +
-  geom_sf(data = x$DD,  aes(color = "DD")) +
-  geom_sf(data = x$DM,   aes(color = "DM")) +
+  geom_sf(data = x$UM, aes(color = "UM")) +
+  geom_sf(data = x$DD, aes(color = "DD")) +
+  geom_sf(data = x$DM, aes(color = "DM")) +
   geom_sf(data = x$origin, col = "green", size = 2) +
-  geom_sf_label(data = x$origin,
-                aes(label = x$origin$identifier),
-                nudge_x = -.08,
-                nudge_y = .03) +
+  geom_sf_label(
+    data = x$origin,
+    aes(label = x$origin$identifier),
+    nudge_x = -.08,
+    nudge_y = .03
+  ) +
   theme_void() +
-  scale_color_manual(name = "Navigation Direction",
-                     breaks = c("UT", "UM", "DD", "DM"),
-                     values = c("UT" = "blue",
-                                "UM" = "red",
-                                "DM" = "orange",
-                                "DD" = "purple")) +
-  theme(legend.position = c(.05, .7),
-        legend.justification = c(0, 0))
-
+  scale_color_manual(
+    name = "Navigation Direction",
+    breaks = c("UT", "UM", "DD", "DM"),
+    values = c(
+      "UT" = "blue",
+      "UM" = "red",
+      "DM" = "orange",
+      "DD" = "purple"
+    )
+  ) +
+  theme(
+    legend.position = c(.05, .7),
+    legend.justification = c(0, 0)
+  )
 ```
 
 One or more modes of navigation can be supplied to the `nav` argument. For example we can ask to navigate along the upper mainstem (UM) from COMID 101.
 
 ```{r}
 summarize.nldi <- function(input) {
-  data.frame(name = names(input),
-             class = sapply(input, class)[1],
-             row.names = NULL) %>%
+  data.frame(
+    name = names(input),
+    class = sapply(input, class)[1],
+    row.names = NULL
+  ) %>%
     mutate(feature_count = ifelse(class == "sf", sapply(input, nrow),
-                                  sapply(input, length)))
+      sapply(input, length)
+    ))
 }
 
 
@@ -267,9 +281,11 @@ In this example we will use that location as the origin, navigate upstream along
 
 ```{r, fig.cap = "Integrating NLDI and NWIS dataRetrieval tools"}
 # Upstream nwis, flowlines, and basin
-fountainCreek <- findNLDI(location = c(-104.780837, 38.786796),
-                          nav = "UM",
-                          find = c("nwis", "basin", "flowlines"))
+fountainCreek <- findNLDI(
+  location = c(-104.780837, 38.786796),
+  nav = "UM",
+  find = c("nwis", "basin", "flowlines")
+)
 
 summarize.nldi(fountainCreek)
 ```
@@ -278,40 +294,51 @@ summarize.nldi(fountainCreek)
 # Identify NLDI sites with daily values "dv"
 #     and record streamflow ("00060")
 #     and recorded flows in 2020
-find <- whatNWISdata(sites = gsub("USGS-", "",
-                                  fountainCreek$UM_nwissite$identifier)) %>%
-  filter(data_type_cd == "dv",
-         parm_cd == "00060",
-         end_date > as.Date("2020-01-01")) %>%
-  mutate(identifier  = paste0("USGS-", site_no)) %>%
+find <- whatNWISdata(sites = gsub(
+  "USGS-", "",
+  fountainCreek$UM_nwissite$identifier
+)) %>%
+  filter(
+    data_type_cd == "dv",
+    parm_cd == "00060",
+    end_date > as.Date("2020-01-01")
+  ) %>%
+  mutate(identifier = paste0("USGS-", site_no)) %>%
   inner_join(fountainCreek$UM_nwissite, by = "identifier") %>%
   sf::st_as_sf()
 
 # Extract Streamflow for identified sites
 Q <- readNWISdv(find$site_no,
-                parameterCd = "00060",
-                startDate = "2020-01-01") %>%
+  parameterCd = "00060",
+  startDate = "2020-01-01"
+) %>%
   renameNWISColumns()
 
 # Plot!
 ggplot() +
-  geom_line(data = Q,
-            aes(x = Date, y = Flow, col = site_no),
-            size = .5) +
+  geom_line(
+    data = Q,
+    aes(x = Date, y = Flow, col = site_no),
+    size = .5
+  ) +
   facet_wrap(~site_no, nrow = 4) +
   theme_minimal() +
   scale_color_brewer(palette = "Set1") +
   theme(legend.position = "none") +
-ggplot() +
+  ggplot() +
   geom_sf(data = fountainCreek$basin, col = NA) +
   geom_sf(data = fountainCreek$UM_flowlines, col = "blue", alpha = .5) +
   geom_sf(data = find, aes(col = site_no)) +
   scale_color_brewer(palette = "Set1") +
   theme_void() +
-  labs(title = "2020 Streamflow",
-       caption = "Fountain Creek, Colorado") +
-  theme(legend.position = "none",
-         plot.title = element_text(face = "bold", hjust = .5))
+  labs(
+    title = "2020 Streamflow",
+    caption = "Fountain Creek, Colorado"
+  ) +
+  theme(
+    legend.position = "none",
+    plot.title = element_text(face = "bold", hjust = .5)
+  )
 ```
 
 
